# Livraria-Django

./: .gitignore  db.sqlite3  livraria_bkp.json  pyproject.toml  requirements.txt
config/: settings.py  urls.py
livraria/: admin.py  models.py  serializers.py  views.py
livraria/migrations/: 0001_initial.py  0002_editora.py  0002_livro_capa.py  0003_autor_livro.py  0003_compra.py  0004_itenscompra.py  0004_remove_editora_site_livro_autores.py
livraria/models/: editora.py  livro.py
livraria/serializers/: autor.py  categoria.py  compra.py  editora.py  livro.py
livraria/views/: autor.py  categoria.py  editora.py  livro.py
uploader/migrations/: 0001_initial.py
usuario/migrations/: 0001_initial.py
