[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Davi",email = "davigabtomaz@gmail.com"},
]
dependencies = [
    "djangorestframework>=3.14.0",
    "django-cors-headers>=4.2.0",
    "djangorestframework-simplejwt>=5.2.2",
    "setuptools>=68.0.0",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "Davi"}

