[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Davi",email = "davigabtomaz@gmail.com"},
]
dependencies = [
    "djangorestframework>=3.14.0",
    "django-cors-headers>=4.2.0",
    "djangorestframework-simplejwt>=5.2.2",
    "setuptools>=68.1.2",
    "python-magic>=0.4.27",
    "Pillow>=10.0.0",
    "drf-spectacular>=0.26.4",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "Davi"}


[[tool.pdm.autoexport]]
filename = "requirements.txt"
without-hashes = "true"

